Fix overflow

--- a/docs/.vuepress/theme/styles/global.sass
+++ b/docs/.vuepress/theme/styles/global.sass
@@ -39,6 +39,7 @@
             flex-grow: 1
             flex-shrink: 1
             margin-bottom: 0
+            width: 50%
             pre
                 border-radius: 0
                 height: 100%
